--- a/css/styles.css
+++ b/css/styles.css
@@ -165,8 +165,14 @@ body {
 
 .hero-section {
     padding: 188px 0px;
-    background-color: var(--dark-color);
-}
+    background-color: var(--dark-color);    
+    background-image: url(../images/dark-bg.png), url(../images/people-office1.jpg);
+    /*background: rgba(46, 47, 66, 0.7);
+    background-image: url(../images/people-office1.jpg);*/
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    }
 
 .hero-title {
     max-width: 496px;
