--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
     --light-color: #f4f4fd;
     --accept-color: #e7e9fc;
     --general-text-color: #434455;
+    --hero-bg-color:rgba(46, 47, 66, 0.7);
+    --customers-icon-color: #8e8f99;
 }
 
 p,
@@ -166,9 +168,7 @@ body {
 .hero-section {
     padding: 188px 0px;
     background-color: var(--dark-color);    
-    background-image: url(../images/dark-bg.png), url(../images/people-office1.jpg);
-    /*background: rgba(46, 47, 66, 0.7);
-    background-image: url(../images/people-office1.jpg);*/
+    background-image: linear-gradient(var(--hero-bg-color),var(--hero-bg-color)), url(../images/people-office1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -204,10 +204,11 @@ body {
     letter-spacing: 0.04em;
 }  
 
-.btn:hover,
-.btn:focus {
-    background-color: var(--pressed-state-color);
+.btn:is(:hover,:focus) {
+    background-color: var(--pressed-state-color);   
 }
+
+
 
 /*--section1--*/
 
@@ -261,7 +262,7 @@ body {
     justify-content: center;
     flex-wrap:wrap;
     gap: 24px;
-    /*filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));*/
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 /*--section3--*/
@@ -293,7 +294,7 @@ body {
 .team-card {
     
     background-color: var(--btn-color);
-    /*box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);*/
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
 }
 
@@ -308,17 +309,86 @@ body {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-    
     letter-spacing: 0.02em;
     color: var(--dark-color);
 }
 
 .member-position {
     text-align: center;
+    margin-bottom: 8px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+
+.social-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+/*circle*/
+.social-item {
+    width: 40px;
+    height: 40px;
+}
+
+/*social logo link*/
+.social-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary-brand-color);
+}
+
+.social-link:is(:hover,:focus) {
+    background-color: var(--pressed-state-color);
+}
+
+.social-icon {
+    fill: var(--btn-color);
+}
+
+/*section customers*/
+.customers {
+    padding-top: 130px;
+    padding-bottom: 120px;
+}
+
+.customers-list {
+    display: flex;
+    gap: 24px;
+}
+
+.customers-item {
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+}
+
+.customers-link {
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--customers-icon-color);
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*
+.customers-link:is(:hover,:focus) {
+    border-bottom: #4d5ae5;
+}
+*/
+
+.customers-icon {
+    fill: var(--customers-icon-color);
+}
+
+
 
 /*--footer--*/
 
