--- a/css/styles.css
+++ b/css/styles.css
@@ -354,8 +354,19 @@ body {
 
 /*section customers*/
 .customers {
-    padding-top: 130px;
+    padding-top: 120px;
     padding-bottom: 120px;
+}
+
+.customers-title {
+    text-align: center;
+    margin-bottom: 72px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--dark-color);
 }
 
 .customers-list {
